@@ -1,0 +1,6 @@
+[environment]
+connect_method = local
+
+[hosts]
+localhost = component1, !fail
+!otherhost = fail2
