@@ -297,7 +297,7 @@ def deploy(root):
 def roots_in_order():
     result = []
     for root in deployment.environment.roots_in_order():
-        result.append((root.host.fqdn, root.name))
+        result.append((root.host.fqdn, root.name, root.ignore))
     return result
 
 
